--- a/css/home/intro.css
+++ b/css/home/intro.css
@@ -1,7 +1,7 @@
 .introducao-bg{
-  background-color: #000;
-  color: #fff;
-  box-shadow:inset 0 -12rem #fff ;
+  background-color: var(--cor-12);
+  color: var(--cor-0);
+  box-shadow:inset 0 -12rem var(--cor-0) ;
 }
 .introducao img{
   height: 100%;
@@ -25,26 +25,12 @@
 }
 .introducao h1{
   margin-bottom: 3.2rem;
-  font-size: 6.4rem;
-  line-height: 1.125;
   max-width: 15ch;
-  font-family: 'Poppins';
-  font-weight: 600;
-}
-.introducao h1 span{
-  color: #FFBB00;
-  font-family: 'Poppins';
-  font-weight: 400;
 }
 
 .introducao p{
   margin-bottom: 3.2rem;
-  font-size: 2.4rem;
   max-width: 40ch;
-  line-height: 1.35;
-  color: #b2b2b2;
-  font-family: 'Roboto';
-  font-weight: 400;
 }
 
 @media(max-width: 120rem){
@@ -58,9 +44,9 @@
 
 @media(max-width: 80rem){
   .introducao-bg{
-    background: #111;
+    background: var(--cor-11);
     padding-top: 4rem;
-    box-shadow: inset 0 -60px #fff;
+    box-shadow: inset 0 -60px var(--cor-0);
   }
   .introducao{
     grid-template-columns: 1fr;
