--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
 @import "/css/global/global.css";
 @import "/css/global/header.css";
+
+/* HOME */
 @import "/css/home/intro.css";
-@import "/css/utllidades/componentes.css"
+
+/* utilidades */
+@import "/css/utllidades/tipografia.css";
+@import "/css/utllidades/componentes.css";
+@import "/css/utllidades/cores.css";
