--- a/css/utllidades/componentes.css
+++ b/css/utllidades/componentes.css
@@ -2,7 +2,7 @@
   padding: 1.6rem 3.2rem;
   background: linear-gradient(#FFBB00, #f2a50c);
   display: inline-block;
-  color: #332200;
+  color: var(--cor-p5);
   border-radius: 4px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, .1);
   font-size: 1.8rem;
