--- a/css/utllidades/componentes.css
+++ b/css/utllidades/componentes.css
@@ -1,3 +1,11 @@
+.container{
+  max-width: 120rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .btn{
   padding: 1.6rem 3.2rem;
   background: linear-gradient(#FFBB00, #f2a50c);
