Adiciona seção de tecnologia adiciona responsivo na seção de tecnologia

--- a/css/style.css
+++ b/css/style.css
@@ -9,5 +9,4 @@
 @import "/css/utllidades/tipografia.css";
 @import "/css/utllidades/componentes.css";
 @import "/css/utllidades/cores.css";
-
-/* BICICLETAS */
+@import "/css/home/tecnologia.css";
