--- a/css/home/intro.css
+++ b/css/home/intro.css
@@ -4,6 +4,7 @@
   box-shadow:inset 0 -12rem var(--cor-0) ;
 }
 .introducao img{
+  width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 4px;
