Adiciona pagina de seguros e responsivo

--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,4 @@
 @import "/css/utllidades/componentes.css";
 @import "/css/utllidades/cores.css";
 @import "/css/home/tecnologia.css";
+@import "/css/home/parceiros.css";
