--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,4 @@
 @import "/css/utllidades/cores.css";
 @import "/css/home/tecnologia.css";
 @import "/css/home/parceiros.css";
+@import "/css/home/depoimento.css";
