--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,4 @@
 @import "/css/home/tecnologia.css";
 @import "/css/home/parceiros.css";
 @import "/css/home/depoimento.css";
+@import "/css/seguros/seguros.css";
