adiciona termos e condiçoes

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 @import "/css/global/header.css";
 @import "/css/global/footer.css";
 @import "/css/bicilcletas/bicicletas-lista.css";
-
+@import "/css/termos/termos.css";
 /* HOME */
 @import "/css/home/intro.css";
 
