--- a/css/utllidades/componentes.css
+++ b/css/utllidades/componentes.css
@@ -58,3 +58,25 @@
 .link:hover{
   color: var(--cor-0);
 }
+
+.titulo-bg{
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background: var(--cor-11);
+}
+
+.titulo p{
+  margin-bottom: 4px;
+}
+
+@media(max-width: 80rem){
+  .titulo-bg{
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
+  .titulo p{
+   font-size: 1.6rem;
+   text-transform: lowercase;
+   font-weight: 400; 
+  }
+}
