--- a/css/seguros/seguros.css
+++ b/css/seguros/seguros.css
@@ -14,6 +14,9 @@ grid-template-columns: 1fr 1fr;
 gap: 4rem;
 align-items: center;
 }
+#seguros .seguros{
+  padding-top: 0;
+}
 .seguros h2{
   grid-column: 1/-1;
 }
@@ -22,6 +25,7 @@ align-items: center;
   padding: 3.2rem 3.2rem 3.2rem 6rem;
   display: grid;
   grid-template-columns: 1fr auto;
+  border-radius: 4px;
 }
 
 .seguros-item h3{
