finaliza a pagina de seguros -Adiciona Perguntas e Respostas -Finaliza Responsivo

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
 
 @import "/css/seguros/seguros.css";
 @import "/css/seguros/vantagens.css";
+@import "/css/seguros/perguntas.css";
 
 
 /* Bicicletas */
