Adiciona nova página Página interna bicicletas Responsivo Adptação o diretório

--- a/css/bicilcleta/bicicletas-lista.css
+++ b/css/bicilcleta/bicicletas-lista.css
@@ -13,7 +13,9 @@
   margin: 0 auto;
   overflow-x: auto;
 }
-
+#nimbus .bicicletas-lista ul{
+  padding: 0px 0px 20px 0px;
+}
 .bicicletas-lista li{
   flex: 1;
   min-width: 28rem;
