Finaliza página de seguros, adiciona seus responsivos

--- a/css/style.css
+++ b/css/style.css
@@ -24,4 +24,5 @@
 /* Bicicletas */
 @import "/css/bicilcleta/bicicletas-lista.css";
 @import "/css/bicilcleta/bicicletas.css";
+@import "/css/bicilcleta/seguro.css";
 @import "/bicicletas/bike.css";
