--- a/css/utllidades/componentes.css
+++ b/css/utllidades/componentes.css
@@ -20,6 +20,8 @@
   font-weight: 600;
   margin-bottom: 2rem;
   max-width: max-content;
+  border: none;
+  cursor: pointer;
 }
 .btn.sec{
   background: var(--cor-10);
