--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,6 @@
 /* Contatos */
 @import "/css/contato/contato.css";
 @import "/css/contato/lojas.css";
+
+/* orçamentos */
+@import "/css/orcamento/orcamento.css";
