--- a/css/global/header.css
+++ b/css/global/header.css
@@ -38,7 +38,8 @@
   position: absolute;
 }
 
-.header-menu a:hover::after{
+.header-menu a:hover::after,
+.header-menu a.ativo::after{
   width: 100%;
 }
 
