--- a/css/home/intro.css
+++ b/css/home/intro.css
@@ -1,5 +1,5 @@
 .introducao-bg{
-  background-color: var(--cor-12);
+  background: var(--cor-12) ;
   color: var(--cor-0);
   box-shadow:inset 0 -12rem var(--cor-0) ;
 }
